DevOps-main/final-devops-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskboard
  labels:
    app.kubernetes.io/part-of: stockpilot
    pod-security.kubernetes.io/warn: baseline
